--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.10.4",
     "@types/react": "18.2.43",
     "autoprefixer": "^10.0.0",
+    "eslint": "^8.55.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "5.3.3"
